Real data uploaded

--- a/notebooks/real-life-data.ipynb
+++ b/notebooks/real-life-data.ipynb
@@ -9,14 +9,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import os\n",
-    "import glob\n",
-    "import gzip"
+    "import glob"
    ]
   },
   {
@@ -28,18 +27,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
-    "frequency = 10 # samples per sec\n",
-    "cut_time = 5 # seconds\n",
+    "frequency = 100 # samples per sec\n",
+    "cut_time = 3 # seconds\n",
     "cut_amount = frequency * cut_time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,15 +50,22 @@
     "]\n",
     "\n",
     "labels_dict = {'wlk': 0, 'sit': 1, \"std\": 2, \"ups\": 3, \"jog\": 4, \"dws\": 5}\n",
-    "labels = list(labels_dict.keys())\n",
-    "\n",
+    "labels = list(labels_dict.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "cwd = os.getcwd()\n",
     "data_dir = os.path.join(cwd, 'real-data')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,9 +132,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 109,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "added file: /Users/Ido/workshop/notebooks/real-data/sit3.csv\n",
+      "added file: /Users/Ido/workshop/notebooks/real-data/sit2.csv\n",
+      "added file: /Users/Ido/workshop/notebooks/real-data/sit1.csv\n",
+      "added file: /Users/Ido/workshop/notebooks/real-data/std2.csv\n",
+      "added file: /Users/Ido/workshop/notebooks/real-data/std3.csv\n",
+      "added file: /Users/Ido/workshop/notebooks/real-data/std1.csv\n",
+      "added file: /Users/Ido/workshop/notebooks/real-data/ups2.csv\n",
+      "added file: /Users/Ido/workshop/notebooks/real-data/ups3.csv\n",
+      "added file: /Users/Ido/workshop/notebooks/real-data/ups1.csv\n",
+      "added file: /Users/Ido/workshop/notebooks/real-data/ups4.csv\n",
+      "added file: /Users/Ido/workshop/notebooks/real-data/jog2.csv\n",
+      "added file: /Users/Ido/workshop/notebooks/real-data/jog3.csv\n",
+      "added file: /Users/Ido/workshop/notebooks/real-data/jog1.csv\n",
+      "added file: /Users/Ido/workshop/notebooks/real-data/jog4.csv\n",
+      "added file: /Users/Ido/workshop/notebooks/real-data/dws3.csv\n",
+      "added file: /Users/Ido/workshop/notebooks/real-data/dws2.csv\n",
+      "added file: /Users/Ido/workshop/notebooks/real-data/dws1.csv\n",
+      "added file: /Users/Ido/workshop/notebooks/real-data/dws4.csv\n"
+     ]
+    }
+   ],
    "source": [
     "frames = []\n",
     "for label in labels:\n",
@@ -140,38 +171,25 @@
     "        df['action'] = label\n",
     "        df['action_file_index'] = labels_dict.get(label)\n",
     "        frames.append(df)\n",
+    "        print('added file: ' + file)\n",
     "full_data = pd.concat(frames)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 86,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "memoryview: a bytes-like object is required, not 'DataFrame'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-86-aaa1bdb3167d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mwith\u001b[0m \u001b[0mgzip\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcwd\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'/full_real_data.gz'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'wb'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfull_data\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/usr/local/Cellar/python/3.6.4_4/Frameworks/Python.framework/Versions/3.6/lib/python3.6/gzip.py\u001b[0m in \u001b[0;36mwrite\u001b[0;34m(self, data)\u001b[0m\n\u001b[1;32m    258\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    259\u001b[0m             \u001b[0;31m# accept any data that supports the buffer protocol\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 260\u001b[0;31m             \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmemoryview\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    261\u001b[0m             \u001b[0mlength\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnbytes\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    262\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: memoryview: a bytes-like object is required, not 'DataFrame'"
-     ]
-    }
-   ],
    "source": [
-    "with gzip.open(cwd + '/full_real_data.gz', 'wb') as f:\n",
-    "    f.write(full_data)"
+    "### Compress result to gzip"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "full_data.to_csv('full_real_data.gz', compression='gzip')"
+   ]
   }
  ],
  "metadata": {
