--- a/notebooks/Models Training Random Forest Sliding Window.ipynb
+++ b/notebooks/Models Training Random Forest Sliding Window.ipynb
@@ -10,9 +10,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -33,9 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.read_csv('full_data.gz', compression='gzip')\n",
@@ -45,9 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "num_experiments = 16\n",
@@ -67,9 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def data_allocation(df):\n",
@@ -91,9 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def data_allocation_train_dev(df):\n",
@@ -113,9 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def data_allocation_only_train(df):\n",
@@ -130,9 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.metrics import classification_report, confusion_matrix\n",
@@ -169,9 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "window_size = 20\n",
@@ -191,15 +175,14 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=-1)]: Done  10 out of  10 | elapsed:  1.9min finished\n"
+      "[Parallel(n_jobs=-1)]: Done   6 out of  10 | elapsed:   47.1s remaining:   31.4s\n",
+      "[Parallel(n_jobs=-1)]: Done  10 out of  10 | elapsed:  1.2min finished\n"
      ]
     },
     {
@@ -235,9 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -246,12 +227,12 @@
       "---- Printing classification report ----\n",
       "             precision    recall  f1-score   support\n",
       "\n",
-      "        wlk       0.99      1.00      0.99     34390\n",
-      "        sit       1.00      1.00      1.00     33794\n",
-      "        std       1.00      1.00      1.00     30738\n",
-      "        ups       0.99      0.99      0.99     15476\n",
-      "        jog       1.00      1.00      1.00     13214\n",
-      "        dws       1.00      0.98      0.99     12955\n",
+      "        wlk       0.99      1.00      0.99     34112\n",
+      "        sit       1.00      1.00      1.00     33926\n",
+      "        std       1.00      1.00      1.00     30579\n",
+      "        ups       0.99      0.99      0.99     15484\n",
+      "        jog       1.00      1.00      1.00     13415\n",
+      "        dws       0.99      0.98      0.99     13051\n",
       "\n",
       "avg / total       1.00      1.00      1.00    140567\n",
       "\n"
@@ -261,7 +242,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=4)]: Done  10 out of  10 | elapsed:    0.1s finished\n"
+      "[Parallel(n_jobs=8)]: Done   6 out of  10 | elapsed:    0.1s remaining:    0.1s\n",
+      "[Parallel(n_jobs=8)]: Done  10 out of  10 | elapsed:    0.2s finished\n"
      ]
     }
    ],
@@ -280,9 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "window_size = 20\n",
@@ -295,15 +275,14 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=-1)]: Done  10 out of  10 | elapsed:  2.0min finished\n"
+      "[Parallel(n_jobs=-1)]: Done   6 out of  10 | elapsed:   55.7s remaining:   37.1s\n",
+      "[Parallel(n_jobs=-1)]: Done  10 out of  10 | elapsed:  1.4min finished\n"
      ]
     },
     {
@@ -339,9 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -358,26 +335,44 @@
     "from sklearn.externals import joblib\n",
     "joblib.dump(rf, 'rf_trained.pkl')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Save trained object as CoreML"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import coremltools\n",
+    "core_model = coremltools.converters.sklearn.convert(rf)\n",
+    "core_model.save('rfProduction.mlmodel')"
+   ]
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
