CoreML correct columns for input

--- a/notebooks/Models Training Random Forest Sliding Window.ipynb
+++ b/notebooks/Models Training Random Forest Sliding Window.ipynb
@@ -345,12 +345,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "import coremltools\n",
-    "core_model = coremltools.converters.sklearn.convert(rf)\n",
+    "core_model = coremltools.converters.sklearn.convert(rf, input_features=X_train.columns.values)\n",
     "core_model.save('rfProduction.mlmodel')"
    ]
   }
