Some spelling corrections

--- a/notebooks/Submission/Part 2 - Feature engineering and classic ML methods.ipynb
+++ b/notebooks/Submission/Part 2 - Feature engineering and classic ML methods.ipynb
@@ -632,7 +632,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h4> Few words about our evaluation metrics </h4>"
+    "<h4> A few words about our evaluation metrics </h4>"
    ]
   },
   {
@@ -703,8 +703,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We get an error that our model didn't converge - i.e the training stopped after reaching to the maximum number of iterations instead of stopping due to our stopping criteria threshold <br>\n",
-    "Lets evalute its performace on the validation set"
+    "We get an error that our model didn't converge - i.e the training stopped after reaching the maximum number of iterations instead of stopping due to our halting criteria threshold <br>\n",
+    "Let's evalute its performace on the validation set"
    ]
   },
   {
@@ -740,8 +740,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The model does quite well on sit and stand labels but not so well on the other activities <br>\n",
-    "We can try and train with more stronger regulariztion and evaluate the results:"
+    "The model performs quite well on sit and stand labels but not so well on the other activities <br>\n",
+    "We can try and train with stronger regularization and evaluate the results:"
    ]
   },
   {
@@ -901,8 +901,8 @@
    "metadata": {},
    "source": [
     "<ul>\n",
-    "<li> We will evalute the performace of a non linear random forest model over our two different encoding data sets </li>\n",
-    "    <li> This model can be trained much faster due to options to parallelize the training o independent trees </li>\n",
+    "<li> We will evaluate the performace of a non linear random forest model over our two different encoding data sets </li>\n",
+    "    <li> This model can be trained much faster due to options to parallelize the training of independent trees </li>\n",
     "    <li> We will run few different architectures of number of trees and evaluate them on our validation set </li>\n",
     "</ul>"
    ]
@@ -1295,12 +1295,19 @@
    "source": [
     "<ul>\n",
     "<li> As we can see, even on our left aside test data the performace of the model is too good to be true. </li>\n",
-    "<li> This is a reason to suspect that although we tested our model on data was not used to train it, <b> we are over-fitting to the currenct data set as a whole </b>  </li>\n",
+    "<li> This is a reason to suspect that although we tested our model on data was not used to train it, <b> we are over-fitting to the current data set as a whole </b>  </li>\n",
     "    <li> We suspect that <b> the generation process of the data was too \"synthetic\" </b>, not represeting \"real world\" data obtained from phone sensors </li>\n",
     "    <li> We used this expirment framework to <b> extract real data obtained from our activities </b> during the day and labeled them accordingly </li>\n",
     "    <li> In the next notebook we will present our model performace on our \"real world\" data and try to train more complex models to improve our performace over the real world data </li>\n",
     "</ul>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1319,7 +1326,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
