--- a/notebooks/Submission/Part 2 - Feature engineering and classic ML methods.ipynb
+++ b/notebooks/Submission/Part 2 - Feature engineering and classic ML methods.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "<h1> MotiononSense Dataset : Smartphone Sensor Data </h1>\n",
-    "<h3> Problem definition - predict user's activity base on phone sensors data </h3>"
+    "<h3> Problem definition - predict user's activity based on smartphone sensors data </h3>"
    ]
   },
   {
