Feed forward part

--- a/notebooks/Submission/Part 3 - Neural Models and Evaluating on Real World Data.ipynb
+++ b/notebooks/Submission/Part 3 - Neural Models and Evaluating on Real World Data.ipynb
@@ -375,18 +375,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def index_to_one_hot(index, array_size):\n",
-    "    one_hot = np.array([0 for _ in range(array_size)])\n",
-    "    one_hot[index] = 1\n",
-    "    return one_hot"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [],
@@ -447,30 +435,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "165785/165785 [==============================] - 3s 16us/step\n"
+      "---- Printing classification report ----\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "        wlk       0.76      0.53      0.63     52652\n",
+      "        sit       0.93      0.97      0.95     35225\n",
+      "        std       0.91      0.97      0.94     36561\n",
+      "        ups       0.36      0.68      0.47     21800\n",
+      "        jog       0.00      0.00      0.00         0\n",
+      "        dws       0.38      0.24      0.29     19547\n",
+      "\n",
+      "avg / total       0.73      0.71      0.70    165785\n",
+      "\n"
      ]
     },
     {
-     "data": {
-      "text/plain": [
-       "0.9681791116666617"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.6/site-packages/sklearn/metrics/classification.py:1137: UndefinedMetricWarning: Recall and F-score are ill-defined and being set to 0.0 in labels with no true samples.\n",
+      "  'recall', 'true', average, warn_for)\n"
+     ]
     }
    ],
    "source": [
-    "y_test_real_one_hot = np.array([index_to_one_hot(index, num_activities) for index in y_test_real])\n",
-    "ff_model.evaluate(X_test_real, y_test_real_one_hot, 50)"
+    "y_test_real_one_hot = np.array([to_categorical(t, num_activities) for t in y_test_real])\n",
+    "ff_predictions = ff_model.predict(X_test_real)\n",
+    "ff_test_predictions = np.array([np.argmax(prediction) for prediction in ff_predictions])\n",
+    "win_test_processor.evaluate_results(y_test_real, ff_test_predictions)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Evaluate results:\n",
+    "* Results for Feed Forward neural network look like the Random Forest ones\n",
+    "* Try to add another hidden layer and see if significant improvement occurs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/5\n",
+      "1409265/1409265 [==============================] - 90s 64us/step - loss: 0.4198\n",
+      "Epoch 2/5\n",
+      "1409265/1409265 [==============================] - 92s 65us/step - loss: 0.3411\n",
+      "Epoch 3/5\n",
+      "1409265/1409265 [==============================] - 89s 63us/step - loss: 0.3255 0s - loss: 0.3\n",
+      "Epoch 4/5\n",
+      "1409265/1409265 [==============================] - 97s 69us/step - loss: 0.3166 0s - loss: 0.31\n",
+      "Epoch 5/5\n",
+      "1409265/1409265 [==============================] - 102s 72us/step - loss: 0.3096\n",
+      "---- Printing classification report ----\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "        wlk       0.82      0.60      0.69     52652\n",
+      "        sit       0.94      0.72      0.81     35225\n",
+      "        std       0.95      0.97      0.96     36561\n",
+      "        ups       0.35      0.73      0.47     21800\n",
+      "        jog       0.00      0.00      0.00         0\n",
+      "        dws       0.35      0.30      0.32     19547\n",
+      "\n",
+      "avg / total       0.76      0.69      0.70    165785\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.6/site-packages/sklearn/metrics/classification.py:1137: UndefinedMetricWarning: Recall and F-score are ill-defined and being set to 0.0 in labels with no true samples.\n",
+      "  'recall', 'true', average, warn_for)\n"
+     ]
+    }
+   ],
+   "source": [
+    "ff2_model = Sequential()\n",
+    "ff2_model.add(Dense(32, input_shape=(X_train.shape[1],), activation='relu'))  # first hidden layer size is 32\n",
+    "ff2_model.add(Dense(32, input_shape=(X_train.shape[1],), activation='relu'))  # second hidden layer size is 32\n",
+    "ff2_model.add(Dropout(dropout_rate))  # adding dropout layer\n",
+    "ff2_model.add(Dense(6, activation='softmax'))  # applying softmax and cross entorpy loss\n",
+    "ff2_model.compile(loss='categorical_crossentropy',optimizer='adam')\n",
+    "ff2_model.fit(X_train, y_train_one_hot, batch_size=32, epochs=5)\n",
+    "\n",
+    "ff2_predictions = ff2_model.predict(X_test_real)\n",
+    "ff2_test_predictions = np.array([np.argmax(prediction) for prediction in ff2_predictions])\n",
+    "win_test_processor.evaluate_results(y_test_real, ff2_test_predictions)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Intermediate neural conclusions:\n",
+    "* Normal feed forward does not perform much better than random forest\n",
+    "* Adding another layer did not improve at all the F1-score\n",
+    "* This might be because our sliding window is not an ideal input for n"
    ]
   }
  ],
